/data folder architecture with READMEs

--- a/abm_scripts/prepare_data.ipynb
+++ b/abm_scripts/prepare_data.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "id": "6ea53b6d-3896-46f1-8f48-960929fc69a8",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Imports and paths"
    ]
@@ -12,7 +16,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "f808bdc0-7828-476a-8397-9afe1f33bc20",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -39,7 +47,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "61ffa016-60f7-4d43-bdf4-3dda6083f08c",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# File containing the activities as extracted from MATSIM\n",
@@ -59,7 +71,11 @@
   {
    "cell_type": "markdown",
    "id": "e0cc684a-5f84-4400-9c0d-9ff25d812b76",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Preparing contacts data\n",
     "In order to run the Agent-Based Model, we'll need to be able to access the data in two ways:\n",
@@ -76,7 +92,11 @@
   {
    "cell_type": "markdown",
    "id": "fe04a037-0330-4fab-8ddb-feee263cbfc0",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Loading the activities into memory\n",
     "Let's first load the activities CSV into memory:"
@@ -86,7 +106,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "ec014c4e-b190-4e29-ab08-669908a438fb",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -231,7 +255,11 @@
   {
    "cell_type": "markdown",
    "id": "a6c9025f-f6f9-42e1-87e2-7a2958076069",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Looking at public transport stations\n",
     "It seems that public transport stations do not have an associated facility name:"
@@ -241,7 +269,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "b4082027-2648-4aad-bdd1-2d7765cdb600",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -364,7 +396,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "934ddbf3-c243-4d6a-bd03-1512c439cb54",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -384,7 +420,11 @@
   {
    "cell_type": "markdown",
    "id": "9024c62d-3dbb-4eb8-b580-32e966826649",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Let's count how many unique stations there are, based on location:"
    ]
@@ -393,7 +433,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "c42e86cd-fc0e-44cf-b1ee-7b28e2dbbc18",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -413,7 +457,11 @@
   {
    "cell_type": "markdown",
    "id": "732e1d3d-6623-46d5-9582-ec365a9e0012",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Since there's far less unique stations, based on location, than entries in the null facilities dataframe, we can assign a name\n",
     "to each station:"
@@ -423,7 +471,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "583ddd1e-52eb-42fa-9cf9-c4fcd4e33f21",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def assign_station_name(row):\n",
@@ -438,7 +490,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "a76e9bae-7d85-42a3-8de7-8e321af98587",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -462,7 +518,11 @@
   {
    "cell_type": "markdown",
    "id": "c8a19ab3-7950-45a0-a209-fc99632a19da",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Let's check that there are no longer any missing facilities:"
    ]
@@ -471,7 +531,11 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "bb961da0-ba12-4a51-b47f-13c2f1c62475",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -527,7 +591,11 @@
   {
    "cell_type": "markdown",
    "id": "01f738b3-471f-4f6c-9727-f2db8d69b553",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Building the lists"
    ]
@@ -535,7 +603,11 @@
   {
    "cell_type": "markdown",
    "id": "98e49ad8-0c66-422a-85f6-845e30513923",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "We'll now build the aforementioned lists:"
    ]
@@ -544,7 +616,11 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "60a2b6ba-1e64-45ac-a2a2-43966dcdb983",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# An \"index\" is the integer associated with an element (as opposed to the original\n",
@@ -571,7 +647,11 @@
   {
    "cell_type": "markdown",
    "id": "b9e3181b-2d75-4af5-9cd0-9151d0cfbbbf",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "We can actually perform the translation while filling the lists, thus only browsing the activities dataset once:"
    ]
@@ -580,7 +660,11 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "7d292d36-9c2e-48f7-ad7b-21a05e0bba70",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def load_into_hashmaps(row):\n",
@@ -617,7 +701,11 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "a795ded5-897f-475e-b6f7-d4eb2fd09f8a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -662,7 +750,11 @@
   {
    "cell_type": "markdown",
    "id": "12d9e239-2e0a-4241-b09e-ad77990324ed",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Let's check the results:"
    ]
@@ -671,7 +763,11 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "3b68037e-5c6c-4c3c-82ca-32cd829a494c",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -690,7 +786,11 @@
   {
    "cell_type": "markdown",
    "id": "7d9d8c3a-9089-4394-8919-8a304e0bdd12",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Saving the ID -> index translation hashmaps"
    ]
@@ -699,7 +799,11 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "bb2d07fe-7f78-4146-85c2-9393f5ea9803",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "agents_id_translations = pd.DataFrame.from_dict(hashmap_ai, orient=\"index\", columns=['agent_index'])\n",
@@ -710,7 +814,11 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "fdf41142-da5c-4f10-9dd2-91ebb6df29b7",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "facilities_id_translations = pd.DataFrame.from_dict(hashmap_fi, orient=\"index\", columns=['facility_index'])\n",
@@ -720,7 +828,11 @@
   {
    "cell_type": "markdown",
    "id": "d26a108b-8093-4636-8e2c-3d9d473c8fa7",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Saving the lists"
    ]
@@ -729,7 +841,11 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "99a6828b-1459-41f6-92e0-d17620d83a7e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# The following writes the list into the .json.gz format\n",
@@ -744,7 +860,11 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "f033f969-802e-48db-b90c-e2555da66cc9",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "with gzip.open(_FACILITIES_VISITORS_DEST_FILE_, \"w\") as dest_file:\n",
@@ -756,7 +876,11 @@
   {
    "cell_type": "markdown",
    "id": "b2444450-a56e-42bf-b0cc-22052d0e3632",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Translating the agents' IDs and facility names into indexes in datasets\n",
     "Now that we've have associations ```facility name``` --> ```facility_index``` and ```agent ID``` --> ```agent index```, we can translate the agents'IDs and facility names in the datasets.  \n",
@@ -767,7 +891,11 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "fb2bcccf-dbf5-4819-801b-7d893dc52bbb",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -841,7 +969,11 @@
   {
    "cell_type": "markdown",
    "id": "3abe215d-8fa5-4708-baca-49d755370d40",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Population attributes dataset"
    ]
@@ -850,7 +982,11 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "c98ca435-63f7-4331-9172-163d58f693be",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1096,7 +1232,11 @@
    "cell_type": "code",
    "execution_count": 20,
    "id": "7c4296c1-2271-4a8f-8877-11b182f14764",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1127,7 +1267,11 @@
    "cell_type": "code",
    "execution_count": 21,
    "id": "7cf81bb9-be73-4f54-88b7-33c9b175aea1",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "pop_attributes.to_csv(_POPULATION_ATTRIBUTES_PATH_, index=True)"
@@ -1136,7 +1280,11 @@
   {
    "cell_type": "markdown",
    "id": "ed7934fd-d1ad-4456-8c2d-c96b2cc3ff5a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## Activities per period\n",
     "While running the model, we'll most likely need the activities per period. "
@@ -1146,7 +1294,11 @@
    "cell_type": "code",
    "execution_count": 22,
    "id": "f529638d-5320-4510-bf6c-eaa59793dedd",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1176,16 +1328,35 @@
   {
    "cell_type": "markdown",
    "id": "d62efb78-894c-443a-bcd6-40a41d17110f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "We'll prcocess the periods successively: for each period, we'll isolate the activities that occurred during that time; then translate the facility and agent; and finally save the result to a specific file.  "
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "9561004a-9847-4006-9b49-4da2e991cf62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if not os.path.exists(_PERIOD_ACTIVITIES_REP_):\n",
+    "    os.makedirs(_PERIOD_ACTIVITIES_REP_)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 23,
    "id": "515cdc1a-37c4-45da-ab7b-23ef8d14015a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Computes the unique periods in the dataset\n",
@@ -1196,7 +1367,11 @@
    "cell_type": "code",
    "execution_count": 25,
    "id": "52cdf53c-5709-41a5-8fd7-bfc7695a9010",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
