Changed the facilities indexes to start at 1, so that 0 is the new unknown instead of -1

--- a/abm_scripts/prepare_data.ipynb
+++ b/abm_scripts/prepare_data.ipynb
@@ -499,7 +499,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5b689514bc1548f6984f8c7a9d392806",
+       "model_id": "89fe7c9ad23c439ca5c0d22c400ed8af",
        "version_major": 2,
        "version_minor": 0
       },
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "60a2b6ba-1e64-45ac-a2a2-43966dcdb983",
    "metadata": {
     "pycharm": {
@@ -628,7 +628,7 @@
     "# list agent index --> facility indexes\n",
     "agents_visits = []\n",
     "# list facility index --> agent indexes\n",
-    "facilities_visitors = []\n",
+    "facilities_visitors = [[]]\n",
     "# Hashmap facility name --> facility index\n",
     "# This will be used to translate the facility names\n",
     "hashmap_fi = dict()\n",
@@ -638,7 +638,10 @@
     "# We use a list of 1 element instead of an integer, because we need it\n",
     "# to be a mutable type in order to use pandas.apply thereafter (that's some\n",
     "# dark python properties, ngl).\n",
-    "facility_counter = [0]\n",
+    "# One more remark: the facilities indexes will start at 1 instead of 0.\n",
+    "# 0 will be used to indicate \"unknown\". We could use -1, but it could be interpreted\n",
+    "# by Python / numpy as \"the last element of a list / array\".\n",
+    "facility_counter = [1]\n",
     "# Same for the agents\n",
     "hashmap_ai = dict()\n",
     "agents_counter = [0]"
@@ -658,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "7d292d36-9c2e-48f7-ad7b-21a05e0bba70",
    "metadata": {
     "pycharm": {
@@ -699,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "a795ded5-897f-475e-b6f7-d4eb2fd09f8a",
    "metadata": {
     "pycharm": {
@@ -710,7 +713,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ad81785df18843be9a42769f82cc89cb",
+       "model_id": "fa28a03f411449569be0c382d86cb363",
        "version_major": 2,
        "version_minor": 0
       },
@@ -738,7 +741,7 @@
        "Length: 4455076, dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -761,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "3b68037e-5c6c-4c3c-82ca-32cd829a494c",
    "metadata": {
     "pycharm": {
@@ -774,7 +777,7 @@
      "output_type": "stream",
      "text": [
       "Number of agents:  825576\n",
-      "Number of facil.:  452141\n"
+      "Number of facil.:  452142\n"
      ]
     }
    ],
@@ -797,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "bb2d07fe-7f78-4146-85c2-9393f5ea9803",
    "metadata": {
     "pycharm": {
@@ -812,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "id": "fdf41142-da5c-4f10-9dd2-91ebb6df29b7",
    "metadata": {
     "pycharm": {
@@ -839,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "id": "99a6828b-1459-41f6-92e0-d17620d83a7e",
    "metadata": {
     "pycharm": {
@@ -858,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "id": "f033f969-802e-48db-b90c-e2555da66cc9",
    "metadata": {
     "pycharm": {
@@ -889,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "id": "fb2bcccf-dbf5-4819-801b-7d893dc52bbb",
    "metadata": {
     "pycharm": {
@@ -955,7 +958,7 @@
        "1098682            4"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -980,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "id": "c98ca435-63f7-4331-9172-163d58f693be",
    "metadata": {
     "pycharm": {
@@ -1079,7 +1082,7 @@
        "      <td>5451</td>\n",
        "      <td>7.040607</td>\n",
        "      <td>46.880248</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1103868</th>\n",
@@ -1103,7 +1106,7 @@
        "      <td>5451</td>\n",
        "      <td>7.040607</td>\n",
        "      <td>46.880248</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1110921</th>\n",
@@ -1127,7 +1130,7 @@
        "      <td>5451</td>\n",
        "      <td>7.040607</td>\n",
        "      <td>46.880248</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1110922</th>\n",
@@ -1151,7 +1154,7 @@
        "      <td>5451</td>\n",
        "      <td>7.040607</td>\n",
        "      <td>46.880248</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1111181</th>\n",
@@ -1175,7 +1178,7 @@
        "      <td>5451</td>\n",
        "      <td>7.040607</td>\n",
        "      <td>46.880248</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>20</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1209,16 +1212,16 @@
        "\n",
        "          wgs84_e    wgs84_n agent_index  \n",
        "id                                        \n",
-       "1069770  7.040607  46.880248         NaN  \n",
-       "1103868  7.040607  46.880248         NaN  \n",
-       "1110921  7.040607  46.880248         NaN  \n",
-       "1110922  7.040607  46.880248         NaN  \n",
-       "1111181  7.040607  46.880248         NaN  \n",
+       "1069770  7.040607  46.880248           0  \n",
+       "1103868  7.040607  46.880248          13  \n",
+       "1110921  7.040607  46.880248          18  \n",
+       "1110922  7.040607  46.880248          19  \n",
+       "1111181  7.040607  46.880248          20  \n",
        "\n",
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1230,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "id": "7c4296c1-2271-4a8f-8877-11b182f14764",
    "metadata": {
     "pycharm": {
@@ -1250,7 +1253,7 @@
        "Name: agent_index, dtype: int64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1265,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "id": "7cf81bb9-be73-4f54-88b7-33c9b175aea1",
    "metadata": {
     "pycharm": {
@@ -1292,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "id": "f529638d-5320-4510-bf6c-eaa59793dedd",
    "metadata": {
     "pycharm": {
@@ -1339,9 +1342,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "9561004a-9847-4006-9b49-4da2e991cf62",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "if not os.path.exists(_PERIOD_ACTIVITIES_REP_):\n",
@@ -1350,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "id": "515cdc1a-37c4-45da-ab7b-23ef8d14015a",
    "metadata": {
     "pycharm": {
@@ -1365,7 +1372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "id": "52cdf53c-5709-41a5-8fd7-bfc7695a9010",
    "metadata": {
     "pycharm": {
